--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="WDD 230 , Ravy Lim, directory and chamber"
+      content="WDD 230 , Ravy Lim, Chamber of Commerce"
     />
     <meta name="author" content="Ravy Lim" />
     <!--Social Media Meta Tags-->
