--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-  <meta name="description" content="WDD 230 , Ravy Lim, Project Milestone - The Directory Page" >
+  <meta name="description" content="WDD 230 , Ravy Lim, chamber directory" >
   <meta name="author" content="Ravy Lim" >
   <!--Social Media Meta Tags-->
   <meta property="og:title" content="WDD 240 - Directory Page" >
@@ -13,7 +13,7 @@
   <meta property="og:image"
     content="https://images.tripadeal.com.au/cdn-cgi/image/format=auto,width=1600/https://cstad.s3.ap-southeast-2.amazonaws.com/4559_Vietnam_Cambodia_WEB_HERO_1.jpg" />
 
-  <title>Directory Page</title>
+  <title>Chamber Directory</title>
   <!--favicon-->
   <link rel="icon" href="../chamber/light_bulb.ico" />
   <!--Typography-->
