add directory link to join.html

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -43,6 +43,7 @@
     <a href="index.html">Chamber</a>
     <a href="../week01/chamber-site-plan.html" target="_blank">Site Plan</a>
     <a href="discover.html">Chamber Discover</a>
+    <a href="directory.html">Directory</a>
     <a href="join.html">Join Us</a>
   </nav>
 
@@ -192,6 +193,7 @@
     <a href="index.html">Chamber</a>
     <a href="../week01/chamber-site-plan.html" target="_blank">Site Plan</a>
     <a href="/chamber/discover.html">Chamber Discover</a>
+    <a href="directory.html">Directory</a>
     <a href="join.html">Join Us</a>
   </nav>
   <footer>
