--- a/chamber/index.html
+++ b/chamber/index.html
@@ -62,8 +62,9 @@
       <h1>Welcome to Rexburg Chamber of Commerce</h1>
     </div>
     <div id="hero_container">
-      <img id="hero" src="images/Rexburg-Temple-air-shot-scaled.webp" alt="Happy Business Man" />
-      <button id="join_btn"><a href="join.html">Join Now</a></button>
+      <img id="hero" src="images/Rexburg-Temple-air-shot-scaled.webp" alt="Rexburg Temple" />
+      <a href="join.html" id="join_btn" class="button">Join Now</a>
+      <!-- <button id="join_btn"><a href="join.html">Join Now</a></button> -->
       <p>
         At Rexburg Chamber of Commerce, our mission is to foster a thriving
         business community by connecting, supporting, and empowering local
@@ -257,7 +258,7 @@
           relevant updates directly to your inbox. Keep your finger on the
           pulse of our Chamber's activities and community news.
         </p>
-        <button id="join_bas"><a href="join.html">Join Now</a></button>
+        <a href="join.html" id="join_bas" class="button">Join Now</a>
       </div>
       <div class="premium_membership">
         <h2>Premium Membership:</h2>
@@ -284,7 +285,9 @@
           or other aspects of your business, our Premium Membership ensures
           you receive tailored support.
         </p>
-        <button id="join_prem"><a href="join.html">Join Now</a></button>
+        <a href="join.html" id="join_prem" class="button">Join Now</a>
+
+        <!-- <button id="join_prem"><a href="join.html">Join Now</a></button> -->
       </div>
     </div>
   </main>
