--- a/chamber/join.html
+++ b/chamber/join.html
@@ -52,19 +52,19 @@
       <fieldset>
         <legend>Personal Information</legend>
         <label>First Name*
-          <input type="text" name="fName" id="fName" required pattern="[a-zA-Z]{2,}" autofocus /></label>
+          <input type="text" name="fName" id="fName" required pattern="[a-zA-Z]{2,}" autofocus placeholder="John"/></label>
         <label>Last Name*
-          <input type="text" name="fName" id="lName" required pattern="[a-zA-Z]{2,}" /></label>
+          <input type="text" name="lName" id="lName" required pattern="[a-zA-Z]{2,}" placeholder="Doe"/></label>
         <label>Title or Position
-          <input type="text" name="fName" id="title" required pattern="[a-zA-Z\s\-]{7,}" /></label>
+          <input type="text" name="title" id="title" required pattern="[a-zA-Z\s\-]{7,}"  placeholder="Manager"/></label>
 
         <label>Email*
           <input type="email" name="email" id="email" required
-            title="Please enter a valid email address (e.g., youremail@example.com)" /></label>
+            title="Please enter a valid email address (e.g., youremail@example.com)" placeholder="youremail@example.com" /></label>
         <label>Phone Number
-          <input type="tel" name="tel" id="tel" required pattern="[0-9]{2,}" /></label>
+          <input type="tel" name="tel" id="tel" required pattern="[0-9]{2,}" placeholder="123-456-7890"/></label>
         <label>Business/Organization's Name
-          <input type="text" name="business" id="business" required /></label>
+          <input type="text" name="business" id="business" required placeholder="Chamber of Commerce"/></label>
       </fieldset>
       <fieldset>
         <legend>Membership Level</legend>
