--- a/chamber/index.html
+++ b/chamber/index.html
@@ -44,7 +44,7 @@
   </div>
   <!--Add a banner-->
   <header>
-    <div id="mode">🔆</div>
+    <div id="mode">☀️</div>
     <img class="logo" src="images/logos/Rexburg_Chamber_of_commerce_logos_transparent.png" alt="Logo" />
     <nav class="navigation">
       <a href="../index.html">Home</a>
