--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
   <meta charset="UTF-8">
@@ -10,6 +10,7 @@
   <meta property="og:title" content="WDD 240 - Homepage">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://udomravylim.github.io/wdd230/">
+  <meta property="og:description" content="Chamber of Commerce -- WDD230 class project" />
   <meta property="og:image"
     content="https://images.tripadeal.com.au/cdn-cgi/image/format=auto,width=1600/https://cstad.s3.ap-southeast-2.amazonaws.com/4559_Vietnam_Cambodia_WEB_HERO_1.jpg">
 
