--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -67,7 +67,7 @@
       <a href="../index.html">Home</a>
       <a href="index.html">Chamber</a>
       <a href="../week01/chamber-site-plan.html" target="_blank">Site Plan</a>
-      <a href="/chamber/discover.html">Chamber Discover</a>
+      <a href="discover.html">Chamber Discover</a>
       <a href="join.html">Join Us</a>
     </nav>
     <div id="owner">
